--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,53 +1,51 @@
+
+
+  body {
+    background-image: url("./assets/images/pergel.jpg"); /* The image used */
+    background-color: #545252; /* Used if the image is unavailable */
+    height: 1800px; /* You must set a specified height */
+    background-position: center; /* Center the image */
+    background-repeat: repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+  
+   }
+
+
 @font-face {
   font-family: 'Forum';
   src: url(./assets/fonts/Forum-Regular.ttf);
 }
 
 .hero-section-container {
-  background-color:black;
- height: 300px; 
+  width:2000px;;
+  height: 500px; 
      
     .image-wrapper {
      height: 120%;
      background-image: url(./assets/images/logowhite.png);
-     background-position: center;
+     background-position:right;
      background-size: cover;
+     background-repeat:no-repeat;
     }
      
-    p, a {
-      color: white;
+    
+    h1{
+    
+      font-weight:lighter;
+      font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-size: 60px;
+      color:rgb(255, 255, 255);
     }
     
 
-    p, a, h1 {
+    p {
+      font-size: 25px;
       color: white;
-      font-family: 'Forum';
-    }
-  
-    .btns-wrapper {
-      display: flex;
-      gap: 1em;
+      font-family:Arial, Helvetica, sans-serif;
     }
 
-    .menu-btn {
-      display: flex;
-      top: 0;
-      right: 0;
-      z-index: relative;
-      width: 20px;
-      height: 20px;
-      color: black;
-      border: 0;
-      background-color: white;
-      margin: 20px;
-    }
     
-    .menu-icon-container {
-      position: absolute;
-      width:10px;
-      transform:translate(-50%, -50%);
-      left: 50%;
-      top:50%;
+    
     
       span{
         background-color: #161412;
@@ -108,7 +106,7 @@
     
     }
     
-  }
+  
 
 
   .menu-container {
@@ -198,19 +196,14 @@
 
   }
 
-  .information-section{
-    margin: 2em 0;
-    p{
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-      line-height: 2;
-    }
+  
 
    span {
    font-weight: bold;
    font-size:large;
    line-height: 1.5;
    }
-  }
+  
 
 
 
