--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -3,7 +3,10 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: darkgray;
+  position:inherit;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .social-container img {
