--- a/client/src/components/prices list/PricesList.scss
+++ b/client/src/components/prices list/PricesList.scss
@@ -13,19 +13,20 @@
   }
   
   .title {
-    color: rgb(55, 55, 57); 
+    color: rgb(164, 164, 175); 
     font-size:50px;
     font-family:fantasy
   }
 
   .description {
-    color:black;
+    color:rgb(255, 255, 255);
     font-size: 30px;
     font-style: italic;
     
   }
   
   .price {
+    color: #ccc;
     text-decoration: underline;
     font-size: 40px;
     font-family:Verdana, Geneva, Tahoma, sans-serif
