--- a/client/src/components/voucher details/VoucherDetails.scss
+++ b/client/src/components/voucher details/VoucherDetails.scss
@@ -4,7 +4,7 @@
   
     h2 {
       font-size: 24px;
-      color: #333;
+      color: #ffffff;
       margin-bottom: 15px;
     }
   
@@ -16,7 +16,7 @@
   
     p {
       font-size: 18px;
-      color: #666;
+      color: #ffffff;
       line-height: 1.6;
     }
   }
